Fix overflow horizontal on mobile and show first accordion item by default

--- a/src/app/pages/recipes/recipes.component.scss
+++ b/src/app/pages/recipes/recipes.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.4rem 1rem 0.4rem 1rem;
+  overflow-x: hidden;
   &-title, &-selection, &-category {
     color: white;
     font-size: 1.2rem;
